# DeepGenotype

./: .gitignore  AUTHORS  DeepGenotype.py  Makefile  README.md  environment.yml  header.csv  process_alleles_freq_table.py  process_alleles_freq_table_HDR.py  process_alleles_freq_table_INS.py  process_alleles_freq_table_SNP.py  pyproject.toml  setup.cfg  test.py
DeepGenotype/: DeepGenotype.py  Untitled  csv2xlsx.py  process_alleles_freq_table_INS.py  process_alleles_freq_table_SNP.py
DeepGenotype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DeepGenotype/example_csv/: test_MiSeq_SNP.csv  test_SNP.csv
DeepGenotype/scripts/: consensus_grouping.py  csv2xlsx.py  process_alleles_freq_table_INS.py  process_alleles_freq_table_SNP.py  utils.py
DeepGenotype/test_MiSeq_INS/: test_INS_genotype_freq.csv
DeepGenotype/test_MiSeq_SNP/: test_MiSeq_SNP_genotype_freq.xlsx
DeepGenotype/test_PacBio/: test_pacbio_genotype_freq.csv
example_csv/: python_commands.txt  test_INS.csv  test_SNP.csv  test_pacbio.csv
test_MiSeq/: test_INS_genotype_freq.csv  test_INS_genotype_freq.xlsx
test_MiSeq/CRISPResso_outputs/: CRISPResso_on_mNGplate19_sorted_A10_AKT1S1-N.html  CRISPResso_on_mNGplate19_sorted_A12_FKBP8-N.html  CRISPResso_on_mNGplate19_sorted_A2_DDX6-C.html  CRISPResso_on_mNGplate19_sorted_A3_LSM14A-N.html  CRISPResso_on_mNGplate19_sorted_A4_LSM14B-N.html  CRISPResso_on_mNGplate19_sorted_A5_EIF3E-C.html  CRISPResso_on_mNGplate19_sorted_A6_EIF3I-C.html  CRISPResso_on_mNGplate19_sorted_A7_RPTOR-C.html  CRISPResso_on_mNGplate19_sorted_A8_RICTOR-C.html  CRISPResso_on_mNGplate19_sorted_A9_MLST8-C.html  CRISPResso_on_mNGplate19_sorted_B11_LRP5-C.html  CRISPResso_on_mNGplate19_sorted_B12_LRP6-C.html  CRISPResso_on_mNGplate19_sorted_B1_RELA-N.html  CRISPResso_on_mNGplate19_sorted_B2_NFKB1-N.html  CRISPResso_on_mNGplate19_sorted_B3_NFKB2-N.html  CRISPResso_on_mNGplate19_sorted_B4_NFKBIA-C.html  CRISPResso_on_mNGplate19_sorted_B5_NFKBIB-C.html  CRISPResso_on_mNGplate19_sorted_B6_NFKBIL1-C.html  CRISPResso_on_mNGplate19_sorted_B7_CASP2-C.html  CRISPResso_on_mNGplate19_sorted_B8_CASP3-C.html  CRISPResso_on_mNGplate19_sorted_B9_CASP6-C.html
test_MiSeq/CRISPResso_run_logs/: mNGplate19_sorted_A10_AKT1S1-N.stderr.txt  mNGplate19_sorted_A12_FKBP8-N.stderr.txt  mNGplate19_sorted_A2_DDX6-C.stderr.txt  mNGplate19_sorted_A5_EIF3E-C.stderr.txt  (+17 more)
test_MiSeq_INS/: test_INS_genotype_freq.xlsx
test_MiSeq_SNP/: test_MiSeq_SNP_genotype_freq.csv
test_PacBio/: test_pacbio_genotype_freq.csv
(+1025 files in other folders)
